# adv_mla_assignment_1_python_package

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
processed/: X_test.csv  X_val.csv  y_train.csv  y_val.csv
src/amla_at1_25608516/: __init__.py  amla_at1_25608516.py
src/amla_at1_25608516/data/: sets.py
src/amla_at1_25608516/models/: training.py
tests/: test_amla_at1_25608516.py
tests/data/: test_sets.py
tests/models/: test_training.py
