[tool.poetry]
name = "amla_at1_25608516"
version = "0.1.0"
description = "assignment 1 python package"
authors = ["duy tung nguyen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
